# parking-spaces-classifier

./: .gitignore  Makefile  README.md  dataset.py  main.py  pyproject.toml
docs/: yolo26n_baseline.md
notebooks/: run_vis.ipynb  yolo26n_baseline_description.ipynb
scripts/: convert_coco_to_yolo.py  create_yolo_subset.py  fetch_data.py  visualize_coco_annotations.py  visualize_yolo_annotations.py
src/datasets/: dataset.py
src/parking_spaces_classifier/datasets/: __init__.py  datamodule.py  dataset.py
src/parking_spaces_classifier/models/: baseline_model.py  detector_model.py
