[project]
name = "parking-spaces-classifier"
version = "0.1.0"
description = "Parking space occupancy classifier"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.2",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.setuptools]
package-dir = { "" = "src", "scripts" = "scripts" }

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (error)
    "F",  # pyflakes
    "B",  # bugbear
    "C4", # flake8-comprehensions
    "I",  # isort
    "UP", # pyupgrade
]

ignore = ["E501"]

[project.scripts]
fetch-data = "scripts.fetch_data:main"
